# FReSCo

./: CMakeLists.txt.in  Dockerfile  LICENSE  README.md  cythonize.py  docker_build.sh  docker_starter.sh  fresco.yml  pip_requirements.txt  setup.py  unix_install.sh
.github/workflows/: test.yml
FReSCo/distances/: __init__.py  _check_overlap.pxd  _check_overlap.pyx  _get_distance_cpp.pyx  _put_in_box_cpp.pyx  distance_utils.py
FReSCo/optimize/: __init__.py  _lbfgs_cpp.pyx  _modified_fire_cpp.pxd  _modified_fire_cpp.pyx  opt.pxd  opt.pyx  result.py
FReSCo/potentials/: __init__.py  _fresco.pxd  _pythonpotential.pyx  combine_potentials.pxd  combine_potentials.pyx  inversepower_potential.pxd  inversepower_potential.pyx  nuwnu.pxd  nuwnu.pyx  nuwu.pxd  nuwu.pyx  uwnu.pxd  uwnu.pyx  uwu.pxd  uwu.pyx  wca_potential.pxd  wca_potential.pyx
FReSCo/utils/: __init__.py  atom_utils.py  c_utils.pxd  c_utils.pyx  distance_value_histogram.py  draw_utils.py  fft.py  lattices.py  plot_utils.py  utils.py
cpp_tests/: README  get_gtest.sh
cpp_tests/source/: CMakeLists.txt  test_base_potential.cpp  test_cell_lists.cpp  test_check_overlap.cpp  test_distance.cpp  test_inversepower.cpp  test_utils.hpp
examples/: NUwNU.ipynb  NUwU.ipynb  UwNU.ipynb  UwU.ipynb
fresco/distances/: _check_overlap.cxx  _check_overlap.pxd  _get_distance_cpp.cxx  _get_distance_cpp.pyx  _put_in_box_cpp.cxx  _put_in_box_cpp.pyx  distance_enum.py  distance_utils.py
fresco/optimize/: _lbfgs_cpp.cxx  _lbfgs_cpp.pyx  _modified_fire_cpp.cxx  _modified_fire_cpp.pxd  _modified_fire_cpp.pyx  opt.cxx  opt.pxd  opt.pyx
fresco/potentials/: __init__.py  _fresco.cxx  _fresco.pxd  _fresco.pyx  _pythonpotential.cxx  _pythonpotential.pyx  combine_potentials.cxx  combine_potentials.pxd  inversepower_potential.cxx  inversepower_potential.pxd  inversepower_potential.pyx  nuwnu.cxx  nuwnu.pxd  nuwu.cxx  nuwu.pxd  uwnu.cxx  uwnu.pxd  uwu.cxx  uwu.pxd  uwu.pyx  wca_potential.cxx  wca_potential.pxd  wca_potential.pyx
fresco/utils/: __init__.py  atom_utils.py  c_utils.cxx  c_utils.pxd  draw_utils.py  fft.py  utils.py
notebooks/: simple_randorg.ipynb
source/: lbfgs.cpp  modified_fire.cpp
source/FReSCo/: base_potential.hpp  batch_pointstats.hpp  cell_list_potential.hpp  cell_lists.hpp  check_overlap.hpp  check_overlap_cell_lists.hpp  combine_potentials.hpp  inversepower_potential.hpp  lbfgs.hpp  meta_pow.hpp  modified_fire.hpp  nuwnu.hpp  nuwu.hpp  omp_utils.hpp  point_pattern_statistics.hpp  queue.hpp  simple_pairwise_potential.hpp  uwnu.hpp  uwu.hpp  wca.hpp
source/fresco/: base_interaction.hpp  batch_pointstats.hpp  cell_list_potential.hpp  combine_potentials.hpp  distance.hpp  inversepower_potential.hpp  moments.hpp  nuwnu.hpp  nuwu.hpp  optimizer.hpp  point_pattern_statistics.hpp  python_potential_wrapper.hpp  simple_pairwise_potential.hpp  uwnu.hpp  uwu.hpp  vecN.hpp  wca.hpp
